# utag

./: CMakeLists.txt  README.md  build.sh
app/: main.cpp
app/resources/: resources.qrc
app/src/: CMakeLists.txt  EditTableController.cpp  EditTableController.h  Logger.cpp  Logger.h  MainTableModel.cpp  MainTableModel.h  TagEditor.cpp  TagEditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
